# fastapi_voting_V2

backend/: README.md  pyproject.toml
docs/: Возможности ролей.md  Спецификация и сценарии.md  Справочник.md  Технические вопросы.md
docs/Функционал/Цикл сессии/: Сессия.md
