[project]
name = "FastAPI_Voting_V2"
version = "0.1.0"
description = ""
authors = [
    {name = "Lyric",email = "vertiipavel0684@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
